Fixed an important issue with the blog and news builder => The edit would not edit the blog/news since the attribute is-new on the edit html snippets where hardcoded to true => This would cause a new blog/news created every time one got updated => And therefore creating multiple blogs with the same name, cluttering the display and not updating since only the first element from the database was used

--- a/views/private/editBlog.ejs
+++ b/views/private/editBlog.ejs
@@ -56,14 +56,13 @@
                     <h1>Abschliessen</h1>
                 </button>
             </section>
-            <button type="button" class="floating-edit-btn" id="edit-current-element" data-blog-is-new="true" data-blog-original-name="NONE">
+            <button type="button" class="floating-edit-btn" id="edit-current-element" data-blog-is-new="false" data-blog-original-name="<%= title %>">
                 <img src="/img/svg/pen.svg" alt="Bearbeiten" title="Bearbeiten" />
             </button>
             <button type="button" class="floating-edit-btn" id="delete-current-element">
                 <img src="/img/svg/trash.svg" alt="Löschen" title="Löschen" />
             </button>
-            <main>
-                <% 
+            <main><% 
                 const jsonBlog = JSON.parse(blog); %>
                 <%- include("../snippets/hero.ejs", {
                     img_alt: jsonBlog.hero.alt,
