--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -12,57 +12,86 @@
         }) %>
     </head>
     <body>
-        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/mitglied#scrollToMembership"; }; %>
+        <% let link_mitglied; %>
+
+        <% if (typeof user !== "undefined" && user !== null && user.valid) { 
+            link_mitglied = "/profile?exec=profileMembership" 
+        } else { 
+            link_mitglied = "/mitglied#scrollToMembership"; 
+        } %>
+
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
+
         <%- include("./snippets/nav.ejs", {
             link_mitglied
         }) %>
+
         <main>
-            <% 
-            const jsonBlog = JSON.parse(blog); %>
-            <pre class="invisible" id="raw">
-                <%= blog %>
-            </pre>
             <%- include("./snippets/hero.ejs", {
-                img_alt: jsonBlog.hero.alt,
-                img_path: jsonBlog.hero.src,
-                title: jsonBlog.hero.title,
-                subtitle: jsonBlog.hero.subtitle,
+                img_alt: blog.hero.imageAlt,
+                img_path: blog.hero.imageUrl,
+                title: blog.hero.title,
+                subtitle: blog.hero.subtitle,
                 cta_text: "",
                 cta_link: origin_url
             }) %>
-            <script>
-                function jsonToElm(options) {
-                    const element = document.createElement(options.tagName);
 
-                    for (let attr in options.attributes) {
-                        element.setAttribute(attr, options.attributes[attr]);
-                    }
+            <% blog.body.forEach((element) => { 
+                if (element.type === "title") { %>
 
-                    for (let child of options.children) {
-                        if (child.tagName === "___text___") {
-                            element.appendChild(document.createTextNode(child.content));
-                            continue;
-                        }
+                    <h1 class="blog_title"><%- element.data.text %></h1>
 
-                        element.appendChild(jsonToElm(child));
-                    }
+                <% } else if (element.type === "subtitle") { %>
 
-                    return element;
-                }
+                    <h2 class="blog_subtitle"><%- element.data.text %></h2>
 
-                document.querySelector("main").appendChild(jsonToElm(JSON.parse(document.getElementById("raw").innerText).html));
-            </script>
+                <% } else if (element.type === "paragraph") { %>
+
+                    <p class="blog_text"><%- element.data.text.replace(/div/g, "span") %></p>
+
+                <% } else if (element.type === "image") { %>
+
+                    <img class="blog_img" src="<%= element.data.imageUrl %>" alt="<%= element.data.imageAlt %>" />
+
+                <% } else if (element.type === "image-paragraph") { %> 
+                    
+                    <%- include("./snippets/blogTextImage.ejs", { 
+                        imagePosition: element.data.imagePosition, 
+                        imageUrl: element.data.imageUrl, 
+                        imageAlt: element.data.imageAlt, 
+                        text: element.data.text 
+                    }) %> 
+                    
+                <% } else if (element.type === "line") { %>
+
+                    <div class="blog_line"></div>
+
+                <% } else if (element.type === "multiple-images") { %>
+
+                    <%- include("./snippets/blogCarousel.ejs", {
+                        imageUrlArray: element.data.imageUrlArray,
+                        imageAltArray: element.data.imageAltArray,
+                    }) %>
+
+                <% } else if (element.type === "team") { %>
+
+                    <%- include("./snippets/teamMember.ejs", {
+                        members: element.data.members,
+                        teamId: element.data.teamId,
+                    }) %>
+
+                <% } %>
+            <% }) %>
             <div class="blog_line"></div>
             <div class="blog_footer">
                 <% function toRealDate (date) { date = date.toString(); let time = date.slice(16, 24); let day = date.slice(8, 10); let year = date.slice(11, 15); let month = date.slice(4, 7); switch (month) { case "Jan": month = "Januar"; break; case "Feb": month = "Februar"; break; case "Mar": month = "März"; break; case "Apr": month = "April"; break; case "May": month = "Mai"; break; case
-                "Jun": month = "Juni"; break; case "Jul": month = "Juli"; break; case "Aug": month = "August"; break; case "Sep": month = "September"; break; case "Oct": month = "Oktober"; break; case "Nov": month = "November"; break; case "Dec": month = "Dezember"; break; }; return `${day}. ${month} ${year} um ${time}`; };%>
-                <img id="blog_footer_img" src="/img/svg/personal.svg" alt="<%= jsonBlog.author %>" />
+                "Jun": month = "Juni"; break; case "Jul": month = "Juli"; break; case "Aug": month = "August"; break; case "Sep": month = "September"; break; case "Oct": month = "Oktober"; break; case "Nov": month = "November"; break; case "Dec": month = "Dezember"; break; }; return `${day}. ${month} ${year} um ${time}`; } %>
+                <img id="blog_footer_img" src="/img/svg/personal.svg" alt="<%= blog.metadata.author %>" />
                 <div>
-                    <p>Autor: <%= jsonBlog.author %></p>
-                    <p>Gepostet am <%= toRealDate(jsonBlog.date) %></p>
+                    <p>Autor: <%= blog.metadata.author %></p>
+                    <p>Gepostet am <%= toRealDate(blog.metadata.date) %></p>
                 </div>
             </div>
         </main>
