--- a/views/snippets/teamMember.ejs
+++ b/views/snippets/teamMember.ejs
@@ -1,36 +1,38 @@
-<ul class="team-member"><% 
-                members.forEach(member => { %>
-                <li>
-                    <div class="member">
-                        <div class="preview">
-                            <img alt="<%= member.name + ' ' + member.family_name %>" src="<%= member.picture + "?timestamp=" + Date.now() %>"><% 
-                            let position = member.position
-                            if (position !== "") position += ": " %>
-                            <h3><%= position + member.name + " " + member.family_name %></h3>
-                            <p><%= member.job %></p>
-                        </div>
-                        <div class="full">
-                            <p class="motivation"><%- member.motivation %></p><% 
-                            if (member.picture2) { %>
-                            <img alt="<%= member.name + " " + member.family_name %>" src="<%=
-                                member.picture.split("s/")[0] + "s/secondary/" + member.picture.split("s/")[1]
-                            %>"><% }; %>
-                        </div>
-                    </div>
-                </li><%
-                }); %>
-            </ul>
-            <script>
-                let team_member_previews = getQuery(".team-member .member .preview");
+<% const randomId = `id_${Date.now()}_${parseInt(Math.random() * 1e9)}` %>
+<ul class="team-member <%= randomId %>" data-team-id="<%= teamId %>">
+    <% members.forEach(member => { %>
+        <li>
+            <div class="member">
+                <div class="preview">
+                    <img alt="<%= member.name + ' ' + member.family_name %>" src="<%= member.picture + "?timestamp=" + Date.now() %>">
+                    <% let position = member.position; %>
+                    <% if (position !== "") {
+                        position += ": ";
+                    } %>
+                    <h3><%= position + member.name + " " + member.family_name %></h3>
+                    <p><%= member.job %></p>
+                </div>
+                <div class="full">
+                    <p class="motivation"><%- member.motivation %></p>
+                    <% if (member.picture2) { %>
+                        <img alt="<%= member.name + " " + member.family_name %>" src="<%= member.picture.split("s/")[0] + "s/secondary/" + member.picture.split("s/")[1] %>">
+                    <% } %>
+                </div>
+            </div>
+        </li>
+    <% }); %>
+</ul>
+<script>
+    let team_member_previews_<%= randomId %> = getQuery(".team-member.<%= randomId %> .member .preview");
 
-                for (let i = 0; i < team_member_previews.length; i++) {
-                    team_member_previews.get(i).click(() => {
-                        let parent = team_member_previews.get(i).parentElement;
-                        if (parent.id === "") parent.id = randomString(32);
-                        parent = getElm(parent.id);
-                        parent.hasClass("open") ?
-                        parent.removeClass("open") :
-                        parent.addClass("open");
-                    });
-                };
-            </script>
+    for (let i = 0; i < team_member_previews_<%= randomId %>.length; i++) {
+        team_member_previews_<%= randomId %>.get(i).click(() => {
+            let parent = team_member_previews_<%= randomId %>.get(i).parentElement;
+            if (parent.id === "") parent.id = randomString(32);
+            parent = getElm(parent.id);
+            parent.hasClass("open") ?
+            parent.removeClass("open") :
+            parent.addClass("open");
+        });
+    };
+</script>
