Fixed issue #63 Fixed an issue where new news would just update the latest one and therefore no newsletter could be sent Updated dependencies

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -49,7 +49,7 @@
 
                 <% } else if (element.type === "paragraph") { %>
 
-                    <p class="blog_text"><%- element.data.text.replace(/div/g, "span") %></p>
+                    <p class="blog_text"><%- element.data.text.replace(/div/g, "span").replace(/\n/g, "<br>") %></p>
 
                 <% } else if (element.type === "image") { %>
 
