--- a/views/private/createNews.ejs
+++ b/views/private/createNews.ejs
@@ -42,7 +42,7 @@
                     <h1>Abschliessen</h1>
                 </button>
             </section>
-            <button type="button" class="floating-edit-btn" id="edit-current-element" data-blog-is-new="true" data-blog-original-name="NONE">
+            <button type="button" class="floating-edit-btn" id="edit-current-element" data-news-is-new="true" data-news-original-name="NONE">
                 <img src="/img/svg/pen.svg" alt="Bearbeiten" title="Bearbeiten" />
             </button>
             <button type="button" class="floating-edit-btn" id="delete-current-element">
