--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,6 @@
-<h1>Error 404:</h1>
-<p>Page could not be found...</p>
-<br />
-<p>Go back <a [routerLink]="'/'">Home?</a></p>
+<div>
+    <h1>Error 404</h1>
+    <p>Die Seite konnte nicht gefunden werden...</p>
+    <br />
+    <p>Zurück zum <a [routerLink]="'/'">Start?</a></p>
+</div>
