Added the auth guards Improved some styles Fixed a wrong link url Added rel to the imprint links

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,7 +14,7 @@
             <h2>Rechtliches</h2>
             <a [routerLink]="'/statutes'">Statuten</a>
             <a [routerLink]="'/imprint'">Quellenangabe</a>
-            <a [routerLink]="'/datenschutz'">Datenschutzerklärung</a>
+            <a [routerLink]="'/privacy'">Datenschutzerklärung</a>
             <h2>Spendenkonto</h2>
             <a href="https://ik.imagekit.io/zmt/pdf/Rechnung%20Spendenkonto.pdf" target="_blank" rel="noopener">IBAN: CH 20 0900 0000 6184 2154 0</a>
             <a href="https://ik.imagekit.io/zmt/pdf/Rechnung%20Spendenkonto.pdf" target="_blank" rel="noopener">zurich - meets - tanzania</a>
