Added the title and meta description for all routes Formatted all files Added redirects for all routes Fixed auth guards and some other stuff

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,25 +1,35 @@
 <p class="text">
     Hier finden Sie eine Liste der Quellen für die Bilder, welche wir von Unsplash bezogen haben. Sie befinden sich alle im Ordner http://www.zurich-meets-tanzania.com/img/stock/<br /><br />
-    <a href="/img/stock/beginning.jpg" target="_blank" rel="noopener">beginning.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@framesbyfin?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Heidi Fin</a> auf
+    <a href="/img/stock/beginning.jpg" target="_blank" rel="noopener">beginning.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@framesbyfin?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Heidi Fin</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/person-mit-kompass-selektive-fokusfotografie-M2Kxb80gqcc?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/chirurgie.jpg" target="_blank" rel="noopener">chirurgie.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@darksidoo?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">JAFAR AHMED</a> auf
+    <a href="/img/stock/chirurgie.jpg" target="_blank" rel="noopener">chirurgie.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@darksidoo?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">JAFAR AHMED</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/arzt-der-operiert-wird-E285pJbC4uE?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/erfolgsrechnung.jpg" target="_blank" rel="noopener">erfolgsrechnung.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@homajob?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Scott Graham</a> auf
+    <a href="/img/stock/erfolgsrechnung.jpg" target="_blank" rel="noopener">erfolgsrechnung.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@homajob?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Scott Graham</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/mann-der-auf-papier-schreibt-OQMZwNd3ThU?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/gyno.jpg" target="_blank" rel="noopener">gyno.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@lunarts?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Volodymyr Hryshchenko</a> auf
+    <a href="/img/stock/gyno.jpg" target="_blank" rel="noopener">gyno.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@lunarts?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Volodymyr Hryshchenko</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/schwangere-frau-im-blauen-kleid-mit-blisterpackung-VbOWSrrEixA?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/mbuzi.jpg" target="_blank" rel="noopener">mbuzi.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@svalenas?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Sergiu Vălenaș</a> auf
+    <a href="/img/stock/mbuzi.jpg" target="_blank" rel="noopener">mbuzi.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@svalenas?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Sergiu Vălenaș</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/weisse-ziege-so8R5rTDTXM?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/nightsky.jpg" target="_blank" rel="noopener">nightsky.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@kaushikpanchal?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Kaushik Panchal</a> auf
+    <a href="/img/stock/nightsky.jpg" target="_blank" rel="noopener">nightsky.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@kaushikpanchal?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Kaushik Panchal</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/weisse-wolken-tagsuber-0juC5JIhPks?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/sky.jpg" target="_blank" rel="noopener">sky.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@felix_mittermeier?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Felix Mittermeier</a> auf
+    <a href="/img/stock/sky.jpg" target="_blank" rel="noopener">sky.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@felix_mittermeier?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Felix Mittermeier</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/blitzeinschlag-unter-bewolktem-himmel-WLGHjbC0Cq4?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/statuten.jpg" target="_blank" rel="noopener">statuten.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@inakihxz?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Iñaki del Olmo</a> auf
+    <a href="/img/stock/statuten.jpg" target="_blank" rel="noopener">statuten.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@inakihxz?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Iñaki del Olmo</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/sortierte-titel-der-bucher-die-sich-in-den-regalen-stapeln-NIJuEQw0RKg?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
-    <a href="/img/stock/vision.jpg" target="_blank" rel="noopener">vision.jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@randytarampi?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Randy Tarampi</a> auf
+    <a href="/img/stock/vision.jpg" target="_blank" rel="noopener">vision.jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@randytarampi?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Randy Tarampi</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/traum-grosser-text-U2eUlPEKIgU?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
     <br />Die folgenden Bilder wurden ebenfalls von Unsplash bezogen, sind jedoch in einem anderen Ordner:<br /><br />
-    <a href="/img/backup/blogerror (1).jpg" target="_blank" rel="noopener">blogerror (1).jpg</a>: Foto von <a target="_blank" rel="noopener" href="https://unsplash.com/de/@heytowner?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">JOHN TOWNER</a> auf
+    <a href="/img/backup/blogerror (1).jpg" target="_blank" rel="noopener">blogerror (1).jpg</a>: Foto von
+    <a target="_blank" rel="noopener" href="https://unsplash.com/de/@heytowner?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">JOHN TOWNER</a> auf
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/fotos/luftaufnahme-von-brown-mountains-JgOeRuGD_Y4?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Unsplash</a><br /><br />
     <a href="/img/backup/blogerror (2).jpg" target="_blank" rel="noopener">blogerror (2).jpg</a>: Foto von
     <a target="_blank" rel="noopener" href="https://unsplash.com/de/@brisch27?utm_content=creditCopyText&amp;utm_medium=referral&amp;utm_source=unsplash">Brigitta Schneiter</a> auf
