--- a/src/app/components/auth-input/auth-input.component.html
+++ b/src/app/components/auth-input/auth-input.component.html
@@ -1,7 +1,7 @@
-<label>{{ label() }}</label>
+<label [for]="inputId">{{ label() }}</label>
 <div>
     <img [src]="iconSource()" [alt]="iconAlt()" />
-    <input [type]="inputType()" [autocomplete]="autocomplete()" [placeholder]="placeholder()" [attr.required]="required() ? true : null" [attr.disabled]="disabled() ? true : null" (input)="streamValue($event)" />
+    <input [id]="inputId" [type]="inputType()" [autocomplete]="autocomplete()" [placeholder]="placeholder()" [attr.required]="required() ? true : null" [attr.disabled]="disabled() ? true : null" (input)="streamValue($event)" />
     @if (isPassword()) {
         <img [src]="secondaryIconSrc()" alt="Ein Auge (Zu oder offen)" (click)="toggleForm()" />
     }
