Fixed an error where the board site would not load. Removed the content of the general-meeting and prepared it for 2026

--- a/views/gv.ejs
+++ b/views/gv.ejs
@@ -33,7 +33,7 @@
             <p class="text"><%- gv.abs1 %></p>
             <p class="text"><%- gv.abs2 %></p>
             <p class="text"><%- gv.abs3 %></p>
-            <div id="auto_KZ2NgtUOvwoaWwWIEZrNiGILxaz">
+            <!--<div id="auto_KZ2NgtUOvwoaWwWIEZrNiGILxaz">
                 <div class="blog_carousel auto_b9kk5sPUCMc6VGDunxT8voBvn8Q">
                     <div class="blog_c-main auto_ZkaKjESpdoYFWrzdVswqJ15vEDy">
                         <img class="auto_vGYGfK3qxjJU5Ho00fxdd0dO8eS" id="auto_vGYGfK3qxjJU5Ho00fxdd0dO8eS" src="/img/content/gv_5.jpg" alt="Keine Beschreibung für dieses Bild..." />
@@ -86,7 +86,7 @@
                         });
                     </script>
                 </div>
-            </div>
+            </div>-->
             <p class="date">Zuletzt aktualisiert am <%= toRealDate(date) %></p>
         </main>
         <%- include("./snippets/footer.ejs", {
