Added password recovery Updated to angular v21 Updated dependencies Added titles in the angular routes object

--- a/src/app/password-recovery-confirm/password-recovery-confirm.component.html
+++ b/src/app/password-recovery-confirm/password-recovery-confirm.component.html
@@ -5,16 +5,8 @@
             Wenn du dein Passwort vergessen hast, kannst du dir ein neues schicken lassen. Beachte jedoch, dass du dich danach nicht mehr mit dem alten Passwort einloggen kannst. Es wird ebenfalls empfohlen, das generierte Passwort so schnell wie
             möglich unter "Mein Konto" zu ändern.
         </p>
-        <app-auth-input
-            [type]="'email'"
-            [label]="'E-Mail'"
-            [placeholder]="'E-Mail eingeben'"
-            [autocomplete]="'email'"
-            [required]="true"
-            [iconSource]="'/svg/personal.svg'"
-            [iconAlt]="'Eine Person'"
-            (valueOutput)="updateEmailInput($event)"
-        ></app-auth-input>
+        <p>E-Mail: {{ email() }}</p>
+        <app-auth-input [type]="'text'" [label]="'Bestätigungscode'" [placeholder]="'Code eingeben'" [required]="true" [iconSource]="'/svg/text.svg'" [iconAlt]="'Buchstaben und Zahlen'" (valueOutput)="updateCodeInput($event)"></app-auth-input>
         <button type="submit">{{ submitButtonText() }}</button>
         <div class="toggler">
             <p>Noch keine Zugangsdaten?</p>
