--- a/src/app/password-recovery-confirm/password-recovery-confirm.component.html
+++ b/src/app/password-recovery-confirm/password-recovery-confirm.component.html
@@ -2,8 +2,8 @@
     <form (submit)="recover($event)">
         <h1>Passwort zurücksetzten</h1>
         <p>
-            Wenn du dein Passwort vergessen hast, kannst du dir ein neues schicken lassen. Beachte jedoch, dass du dich danach nicht mehr mit dem alten Passwort einloggen kannst. Es wird ebenfalls empfohlen, das generierte Passwort so schnell wie
-            möglich unter "Mein Konto" zu ändern.
+            Um dein Passwort zurückzusetzen müssen wir zuerst einen Sicherheitscheck machen. Dazu haben wir dir per E-Mail einen Bestätigungscode geschickt. Bitte gib diesen im Textfeld unten ein um deine Anfrage abzuschliessen. Danach können wir dir
+            dein neues Passwort setzen und per E-Mail zukommen lassen. Aus Sicherheitsgründen empfehlen wir dir, das generierte Passwort so schnell wie möglich unter "Mein Account" zu ändern.
         </p>
         <p>E-Mail: {{ email() }}</p>
         <app-auth-input [type]="'text'" [label]="'Bestätigungscode'" [placeholder]="'Code eingeben'" [required]="true" [iconSource]="'/svg/text.svg'" [iconAlt]="'Buchstaben und Zahlen'" (valueOutput)="updateCodeInput($event)"></app-auth-input>
