--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -3,7 +3,7 @@
         <h1>Passwort zurücksetzten</h1>
         <p>
             Wenn du dein Passwort vergessen hast, kannst du dir ein neues schicken lassen. Beachte jedoch, dass du dich danach nicht mehr mit dem alten Passwort einloggen kannst. Es wird ebenfalls empfohlen, das generierte Passwort so schnell wie
-            möglich unter "Mein Konto" zu ändern.
+            möglich unter "Mein Account" zu ändern.
         </p>
         <app-auth-input
             [type]="'email'"
